apps/audiobookshelf/service-audiobookshelf.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: audiobookshelf
  name: audiobookshelf
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: audiobookshelf
